# fastapi-boilerplate

./: LICENSE.md  README.md  pyproject-poetry.toml  pyproject.toml  requirements.txt
src/: run.py
src/app/: main.py  setup.py  template.py
src/app/api/: __init__.py  dependencies.py
src/app/api/v1/: __init__.py  health.py  login.py
src/app/core/: config.py
src/app/core/db/: database.py
src/config/: base.py  dev.py  production.py  settings.py
src/core/: logger.py  logging.py
